centered flag button and changed about from ckick to scroll

--- a/app/views/locations/browse.html.erb
+++ b/app/views/locations/browse.html.erb
@@ -121,7 +121,7 @@
                     <i class="fa fa-map-marker fa-stack-1x fa-inverse"></i>
                 </span>
                 <h4 class="service-heading dk-grey">Learn More</h4>
-                <p class="text-muted">Choose a photo that interests you, and click to learn more about where it was taken.</p>
+                <p class="text-muted">Choose a photo that interests you, and scroll to learn more about where it was taken.</p>
             </div>
             <div class="col-md-4">
                 <span class="fa-stack fa-4x">
