--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -23,6 +23,10 @@ body {
   display: none;
 }
 
+#flag-photo {
+  width: 200px;
+  color:grey;
+}
 #sorry p {
   font-family: 'Paytone One';
   text-align: center;
